--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,11 +1,25 @@
 # Experience template
 - layout: left
-  company: Company name
-  link: Link to company (optional)
-  job_title: Job title
-  dates: Date Range (eg. November 2016 - present)
+  company: 8x8
+  #link: Link to company (optional)
+  job_title: API Product Owner
+  dates: January 2019 - present
   quote: >
-   Short description of the company (optional)
+   8x8 is a provider of Voice over IP products. 8x8 products include cloud-based voice, contact center, video, 
+   mobile and unified communications for businesses.
   description: | # this will include new lines to allow paragraphs
-    Description of role
+     I am currently working at 8x8 as the API Product Owner. I am part of a team developing our public API program. 
+     As a member of the Product Management team I work with our globally distributed developer teams on the best way 
+     to present their APIs to our customers. I  help our development teams in Cluj, London, and Singapore develop both 
+     customer facing reference and use case information. 
+     
+     8x8 has an incredible data platform and these APIs enable our customers to access a great deal of enterprise information.
+     
+     When I started at 8x8 there was no structured public API program in place. I was able to get the conversation started
+     amongst the disparate development teams as to strategy and standardized processes. 
+     
+     I enjoy learning about all areas of our APIs which enables me to be a go-to person for knowledge and queries within 
+     the Product and the other teams. I am always looking to suggest improvements and challenge what and how we are working 
+     to make sure we are delivering the best service
+
     
