--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,7 +4,7 @@
   #link: Link to company (optional)
   job_title: API Product Owner
   dates: January 2019 - present
-  quote: >
+  # quote: >
    8x8 is a provider of Voice over IP products. 8x8 products include cloud-based voice, contact center, video, 
    mobile and unified communications for businesses.
   description: | # this will include new lines to allow paragraphs
