--- a/_config.yml
+++ b/_config.yml
@@ -29,11 +29,11 @@ about_content: | # this will include new lines to allow paragraphs
   I am a business professional with skills and interest in information development, marketing, and management. I have extensive and 
   varied experience working at both established Silicon Valley tech giants as well as startups.
   
-  Currently based in San Jose via San Francisco, Seattle, and Los Angeles. 
+  Currently based in San Jose via stop in San Francisco, Orange County, and Seattle. I grew up in the Los Angeles area. 
   
   An alumnus of Santa Clara University and the University of Washington.
 
-  Intrigued by strategy, organization, design, writing, art, productivity hacks, meditation, vegetarian cooking, workouts, classical and 
+  Intrigued by strategy, organization, design, writing, art, productivity hacks, meditation, cooking, workouts, classical and 
   metal music, IDM, and thought provoking conversation.
 
 # Experience Section
