--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ about_content: | # this will include new lines to allow paragraphs
   I am a business professional with skills and interest in information development, marketing, and management. I have extensive and 
   varied experience working at both established Silicon Valley tech giants as well as startups.
   
-  Currently based in San Jose via stops in San Francisco, Orange County, and Seattle. I grew up in the Los Angeles area. 
+  Currently based in San Jose via stops in San Francisco, Orange County, Long Beach, and Seattle. I grew up in the Los Angeles area. 
   
   An alumnus of Santa Clara University and the University of Washington.
 
