--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,6 @@
 - layout: left
   name: Santa Clara University, Leavey School of Business
-  qualification: Master of Business Administration - 2014 (focus on Management and Marketing)
-  quote: > # also the world.
+  qualification: Master of Business Administration - 2014 (focus on Management and Marketing
   description: | # this will include new lines to allow paragraphs
     My business knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills:
     
@@ -12,7 +11,6 @@
 - layout: left
   name: University of Washington
   qualification: Bachelor of Science in Zoology
-  quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
      Completion of my degree facilitated an Environmental Scientist career:
      
