--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ more_content: | # this will include new lines to allow paragraphs
    - Returning to study of the cello
    - Learning German
    - [Reading](https://www.goodreads.com/user/show/5016817-kurt-heiss)
-   - Vegetarian cooking
+   - Cooking
 
 # Footer
 footer_show_references: true
