--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,12 @@
+# Project template
+- layout: Left
+  name: Project name
+  link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+  description: | # this will include new lines to allow paragraphs
+    Description about the work on/with the project
+
+
+
 - layout: left
   
   description: | # this will include new lines to allow paragraphs
