--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,6 +9,7 @@
      
      [Voice SDK User Information](https://developer.wavecell.com/voice/voice-sdk/overview)
      
+- layout: left 
  company: 8x8 Projects
   description: | # this will include new lines to allow paragraphs 
      
