--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,12 +10,14 @@
      [Voice SDK User Information](https://developer.wavecell.com/voice/voice-sdk/overview)
      
 - layout: left 
-  company: 8x8 Projects
+  company: API/Developer Guides
   description: | # this will include new lines to allow paragraphs 
      
-     [8x8 Cloud Communications Reference Portal](https://8x8gateway-8x8apis.apigee.io/)
+     [8x8](https://drive.google.com/drive/folders/1tX0krXawS6JgDBN4cRdjgUQfDLOx8Uzb?usp=sharing)
      
-     [Virtual Office Analytics APIs](https://8x8gateway-voanalytics.apigee.io/)
+     [Ayasdi](https://drive.google.com/drive/folders/1swpfD155wKukRjA6JeFk73YPOnZf99I5?usp=sharing)
      
-     [Voice SDK User Information](https://developer.wavecell.com/voice/voice-sdk/overview)
+     [Symantec (Cloudfire)](https://drive.google.com/drive/folders/1XHXl2vvMwiRPoTk3AOuH5xjIk0sIOowE?usp=sharing)
+     
+     [ExactBid](https://drive.google.com/drive/folders/1jW5wILglZFS779_aQ4d1LETbj-N9Wc7s?usp=sharing)
 
