--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,7 +9,7 @@
      
      [Voice SDK User Information](https://developer.wavecell.com/voice/voice-sdk/overview)
      
-- layout: top middle 
+- layout: left 
   company: API/Developer Guides
   description: | # this will include new lines to allow paragraphs 
      
