--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -15,5 +15,6 @@
   company: Technical Documents
   description: | # this will include new lines to allow paragraphs 
      
+     example example example
    
     
