--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 - layout: left
   company: 8x8 Projects
   description: | # this will include new lines to allow paragraphs 
-    || [images/profile.jpg](https://8x8gateway-8x8apis.apigee.io/) || [Virtual Office Analytics APIs](https://8x8gateway-voanalytics.apigee.io/) || [Voice SDK User Information](https://developer.wavecell.com/voice/voice-sdk/overview) ||
+    || [(/kurtnheiss.io/images/profile.jpg)](https://8x8gateway-8x8apis.apigee.io/) || [Virtual Office Analytics APIs](https://8x8gateway-voanalytics.apigee.io/) || [Voice SDK User Information](https://developer.wavecell.com/voice/voice-sdk/overview) ||
      
 - layout: left 
   company: API/Developer Guides
