--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -17,6 +17,15 @@
      
      I enjoy learning about all areas of our APIs which enables me to be a go-to person for knowledge and queries within 
      the Product and the other teams. I am always looking to suggest improvements and challenge what and how we are working 
-     to make sure we are delivering the best service
+     to make sure we are delivering the best service.
+     
+- layout: left
+  company: IT Knowledge
+  #link: Link to company (optional)
+  #job_title: API Product Owner
+  #dates: January 2019 - present
+  description: | # this will include new lines to allow paragraphs
+     
+     APIs, Apigee Edge usage and administration, SwaggerHub usage and administration, Github, Stoplight, markdown, Postman, HTML, CSS, JIRA, OpenAPI, JSON, XML, Google docs and sites, Confluence authoring and management, Jupyter notebooks, Linux, UNIX, Salesforce, Visual Studio Code, Agile software development, Microsoft Office Suite
 
     
