--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 - layout: left
   name: Santa Clara University, Leavey School of Business
-  qualification: Master of Business Administration - 2014 (focus on Management and Marketing
+  qualification: Master of Business Administration - 2014 (focus on Management and Marketing)
   description: | # this will include new lines to allow paragraphs
     My business knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills:
     
