--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ more_content: | # this will include new lines to allow paragraphs
    - Writing screenplays
    - Clay and papier mache sculpting
    - Trying different techniques on the guitar and bass
+   - Learning to [create music](https://www.soundtrap.com/play/-MV5N-FgSo6Z1b37rBC6WQ/sauerkraut2/) via DAW
    - Returning to study of the cello
    - Learning German
    - [Reading](https://www.goodreads.com/user/show/5016817-kurt-heiss)
