--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,12 +5,12 @@
   job_title: API Product Owner
   dates: January 2019 - present
   description: | # this will include new lines to allow paragraphs
-     I am currently working at 8x8 as the API Product Owner. I am part of a team developing our public API program. 
+     I am currently working as the API Product Owner at 8x8 and part of a team developing our public API program. 
      As a member of the Product Management team I work with our globally distributed developer teams on the best way 
-     to present their APIs to our customers. I  help our development teams in Cluj, London, and Singapore develop both 
+     to present their APIs to our customers. I  help our teams in Cluj, London, and Singapore develop both 
      customer facing reference and use case information. 
      
-     8x8 has an incredible data platform and these APIs enable our customers to access a great deal of enterprise information.
+     8x8 has an incredible data platform and these APIs enable our customers to access a great deal of data.
      
      When I started at 8x8 there was no structured public API program in place. I was able to get the conversation started
      amongst the disparate development teams as to strategy and standardized processes. 
