--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,7 @@
   job_title: API Product Owner
   dates: January 2019 - present
   description: | # this will include new lines to allow paragraphs
-     I am currently working as the API Product Owner at 8x8 and part of a team developing our public API program. 
+     I am currently working as the API Product Owner at 8x8 collaborating with team members to develop our public API program. 
      As a member of the Product Management team I work with our globally distributed developer teams on the best way 
      to present their APIs to our customers. I  help our teams in Cluj, London, and Singapore develop both 
      customer facing reference and use case information. 
