--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,21 +3,18 @@
   company: 8x8
   #link: Link to company (optional)
   job_title: API Product Owner
-  dates: January 2019 - present
+  dates: January 2019 - August 2021
   description: | # this will include new lines to allow paragraphs
-     I am currently working as the API Product Owner at 8x8 collaborating with team members to develop our public API program. 
-     As a member of the Product Management team I work with our globally distributed developer teams on the best way 
-     to present their APIs to our customers. I  help our teams in Cluj, London, and Singapore develop both 
+     As a member of the Product Management team I worked with globally distributed developer teams on the best way 
+     to present their APIs to our customers. I  helped teams in Cluj, London, Singapore, and Campbell develop both 
      customer facing reference and use case information. 
      
-     8x8 has an incredible data platform and these APIs enable our customers to access a great deal of data.
+     8x8 has an incredible data platform and these APIs enabled our customers to access a great deal of data.
      
      When I started at 8x8 there was no structured public API program in place. I was able to get the conversation started
      amongst the disparate development teams as to strategy and standardized processes. 
      
-     I enjoy learning about all areas of our APIs which enables me to be a go-to person for knowledge and queries within 
-     the Product and the other teams. I am always looking to suggest improvements and challenge what and how we are working 
-     to make sure we are delivering the best service.
+     Constant iteration and improvement seeking to challenge what and how we are working to make sure we are delivering the best service.
      
 # - layout: left
 #  company: IT Knowledge
