--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -18,7 +18,7 @@
      Constant iteration and improvement seeking to challenge what and how we are working to make sure we are delivering the best service.
 
 - layout: left
-  company: (8x8)[https://www.8x8.com/]
+  company: [8x8](https://www.8x8.com/)
   #link: Link to company (optional)
   job_title: API Product Owner
   dates: January 2019 - August 2021
