--- a/_config.yml
+++ b/_config.yml
@@ -26,12 +26,12 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, I'm Kurt 
   
-  I am a business professional with skills and interest in information development, marketing, and management. I have extensive and 
-  varied experience working at both established Silicon Valley tech giants as well as startups.
+  I am a business professional with skills and interest in information and content development, marketing, and management. I have extensive and 
+  varied experience working at both established tech giants as well as startups.
   
   Currently based in San Jose via stops in San Francisco, Orange County, Long Beach, and Seattle. I grew up in the Los Angeles area. 
   
-  An alumnus of Santa Clara University and the University of Washington.
+  An alumnus of Santa Clara University (MBA)  and the University of Washington (BS, Zoology).
 
   Intrigued by strategy, organization, design, writing, art, productivity hacks, meditation, cooking, workouts, classical and 
   metal music, IDM, and thought provoking conversation.
@@ -53,13 +53,14 @@ more_content: | # this will include new lines to allow paragraphs
   
    - Surfing
    - Swimming 
+   - Weight training
    - Hiking
    - Writing screenplays
    - Clay and papier mache sculpting
    - Trying different techniques on the guitar and bass
    - Learning to [create music](https://www.soundtrap.com/play/-MV5N-FgSo6Z1b37rBC6WQ/sauerkraut2/) via DAW
    - Returning to study of the cello
-   - Learning German
+   - Learning German and Dutch
    - [Reading](https://www.goodreads.com/user/show/5016817-kurt-heiss)
    - Cooking
 
