--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,6 +7,20 @@
   dates: September 2021 - present
   description: | # this will include new lines to allow paragraphs
 
+     As a Senior API Technical Writer I support LinkedIn’s Marketing Solutions - Partner Engineering team for the 
+     LinkedIn Marketing Developer Platform API. 
+     
+     I develop and edit external customer engineering documentation for the Marketing API library, role-based user access 
+     controls, infrastructure, systems, tools, and software engineering practices. The Marketing APIs enable our customers develop and 
+     design online posts, video ads, and other content for their services. 
+     
+     I design and organize content for new API products. I gather requirements for the customer support team in serving over more than 
+     2000 LinkedIn partners. I oversee and implement document version control (via Github) across the marketing documentation library 
+     in parallel with API version control. 
+     
+     A final editor and source of truth for information displayed on our partner documentation portal. Ongoing iteration on improvements in 
+     display and content.
+     
 - layout: left
   company: 8x8
   link: https://www.8x8.com
