--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ name: Kurt N. Heiss
 # title: Project Management/Content Development
 email: kurtnheiss@gmail.com
 ## website: www.github.com/kurtnheiss/kurtnheiss.io
+resume: 
 
 # Social links
 twitter_username: kurtnheiss
@@ -55,7 +56,7 @@ more_content: | # this will include new lines to allow paragraphs
    - Writing screenplays
    - Clay and papier mache sculpting
    - Trying different techniques on the guitar and bass
-   - Learning to [create music](https://www.soundtrap.com/play/-MV5N-FgSo6Z1b37rBC6WQ/sauerkraut2/) via DAW
+   - Learning to create music via Logic
    - Returning to study of the cello
    - Learning German and Dutch
    - [Reading](https://www.goodreads.com/user/show/5016817-kurt-heiss)
