--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,6 @@ name: Kurt N. Heiss
 # title: Project Management/Content Development
 email: kurtnheiss@gmail.com
 ## website: www.github.com/kurtnheiss/kurtnheiss.io
-resume: 
 
 # Social links
 twitter_username: kurtnheiss
@@ -33,6 +32,8 @@ about_content: | # this will include new lines to allow paragraphs
   Currently based in San Jose via stops in San Francisco, Orange County, Long Beach, and Seattle. I grew up in the Los Angeles area. 
   
   An alumnus of Santa Clara University (MBA)  and the University of Washington (BS, Zoology).
+  
+  You can view my resume [here](../kurt heisscv.pdf)
 
 # Experience Section
 # experience_title: Experience
