--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   An alumnus of Santa Clara University (MBA)  and the University of Washington (BS, Zoology).
   
-  You can view my resume [here](../kurt heisscv.pdf)
+  You can view my resume [here](../Kurt Heiss cv.pdf)
 
 # Experience Section
 # experience_title: Experience
