--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,13 +7,15 @@
   description: | # this will include new lines to allow paragraphs 
      
      
-     I support Roku’s OneView Ad Platform APIs and Partner Developer Relations projects. I manage and develop project initiative for
+     As a Senior API Technical Writer I support Roku’s OneView Ad Platform APIs and Partner Developer Relations projects. I manage and develop project initiative for
      a forthcoming API Portal to showcase ad tech data availability from the Roku platform. I am a member of Roku Partner Developer Relations 
      team which seeks to better communicate concepts and procedures for the creation of a Roku channel. My current project work includes 
      development of educational videos and associated documentation for the Brightscript programming language which is used to build 
      media and networked applications for embedded devices. I assist developers and product management in the creation and edit of 
      partner documentation.
      
+     A final editor and source of truth for information displayed on our documentation portal. Provide ongoing iteration on improvements in 
+     display and content.     
      
 - layout: left
   company: LinkedIn
@@ -22,18 +24,17 @@
   dates: September 2021 - May 2023
   description: | # this will include new lines to allow paragraphs
 
-     As a Senior API Technical Writer I support LinkedIn’s Marketing Solutions - Partner Engineering team for the 
-     LinkedIn Marketing Developer Platform API. 
+     Supported LinkedIn’s Marketing Solutions - Partner Engineering team for the LinkedIn Marketing Developer Platform API. 
      
-     I develop and edit external customer engineering documentation for the Marketing API library, role-based user access 
-     controls, infrastructure, systems, tools, and software engineering practices. The Marketing APIs enable our customers develop and 
+     Developed and edited external customer engineering documentation for the Marketing API library, role-based user access 
+     controls, infrastructure, systems, tools, and software engineering practices. The Marketing APIs enabled our customers develop and 
      design online posts, video ads, and other content for their services. 
      
-     I design and organize content for new API products. I gather requirements for the customer support team in serving over more than 
-     2000 LinkedIn partners. I oversee and implement document version control (via Github) across the marketing documentation library 
+     Designed and organize content for new API products. I gathered requirements for the customer support team in serving over more than 
+     2000 LinkedIn partners. Oversight and implement document version control (via Github) across the marketing documentation library 
      in parallel with API version control. 
      
-     A final editor and source of truth for information displayed on our partner documentation portal. Ongoing iteration on improvements in 
+     I was a final editor and source of truth for information displayed on our partner documentation portal. I provided ongoing iteration on improvements in 
      display and content.
      
 
