--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,12 +7,13 @@
   description: | # this will include new lines to allow paragraphs 
      
      
-     As a Senior API Technical Writer I support Roku’s OneView Ad Platform APIs and Partner Developer Relations projects. I manage and develop project initiative for
-     a forthcoming API Portal to showcase ad tech data availability from the Roku platform. I am a member of Roku Partner Developer Relations 
-     team which seeks to better communicate concepts and procedures for the creation of a Roku channel. My current project work includes 
-     development of educational videos and associated documentation for the Brightscript programming language which is used to build 
-     media and networked applications for embedded devices. I assist developers and product management in the creation and edit of 
-     partner documentation.
+     As a Senior API Technical Writer I support Roku’s OneView Ad Platform APIs and Partner Developer Relations projects. I manage and 
+     develop project initiative for a forthcoming API Portal to showcase ad tech data availability from the Roku platform. 
+     
+     I am a member of Roku Partner Developer Relations team which seeks to better communicate concepts and procedures for the creation 
+     of a Roku channel. My current project work includes development of educational videos and associated documentation for the Brightscript 
+     programming language which is used to build media and networked applications for embedded devices. I assist developers and product 
+     management in the creation and edit of partner documentation.
      
      A final editor and source of truth for information displayed on our documentation portal. Provide ongoing iteration on improvements in 
      display and content.     
