--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 - layout: left 
   company: LinkedIn
   description: | # this will include new lines to allow paragraphs
-    [Creatives API Beta](https://docs.microsoft.com/en-us/linkedin/marketing/integrations/ads/account-structure/create-and-manage-creatives-beta?tabs=http) // [Videos API Beta](https://docs.microsoft.com/en-us/linkedin/marketing/integrations/community-management/shares/videos-api-beta?tabs=http) // [Posts API Beta](https://docs.microsoft.com/en-us/linkedin/marketing/integrations/community-management/shares/posts-api-beta?tabs=http) // [Video Ads Beta](https://docs.microsoft.com/en-us/linkedin/marketing/integrations/ads/advertising-targeting/create-and-manage-video-beta)
+    [Create and Manage Creatives](https://learn.microsoft.com/en-us/linkedin/marketing/integrations/ads/account-structure/create-and-manage-creatives?view=li-lms-unversioned&tabs=http) // [Videos API Beta](https://learn.microsoft.com/en-us/linkedin/marketing/usecases/foundations/video-ads-beta-learn?view=li-lms-2023-01) // [UGC Posts API Beta](https://learn.microsoft.com/en-us/linkedin/marketing/integrations/community-management/shares/ugc-post-api?view=li-lms-unversioned&tabs=http) // [Video Ads Beta](https://learn.microsoft.com/en-us/linkedin/marketing/integrations/ads/advertising-targeting/create-and-manage-video?view=li-lms-unversioned&tabs=http)
     // [Little Text Format](https://docs.microsoft.com/en-us/linkedin/marketing/integrations/community-management/shares/little-text-format)
 
 - layout: left
