--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,14 +3,14 @@
   company: Roku (Advertising and Developer Relations)
   link: https://advertising.roku.com/oneview-onboarding / https://developer.roku.com/overview
   job_title: Senior API Technical Writer
-  dates: May 2022 - present
+  dates: May 2022 - March 2023
   description: | # this will include new lines to allow paragraphs 
      
      
      As a Senior API Technical Writer I support Roku’s OneView Ad Platform APIs and Partner Developer Relations projects. I manage and 
      develop project initiative for a forthcoming API Portal to showcase ad tech data availability from the Roku platform. 
      
-     I am a member of Roku Partner Developer Relations team which seeks to better communicate concepts and procedures for the creation 
+     I am a member of Roku Partner Engineering Developer Relations team which seeks to better communicate concepts and procedures for the creation 
      of a Roku channel. My current project work includes development of educational videos and associated documentation for the Brightscript 
      programming language which is used to build media and networked applications for embedded devices. I assist developers and product 
      management in the creation and edit of partner documentation.
