--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,15 +7,16 @@
   description: | # this will include new lines to allow paragraphs 
      
      
-     As a Senior API Technical Writer I support Roku’s OneView Ad Platform APIs and Partner Developer Relations projects. I manage and 
-     develop project initiative for a forthcoming API Portal to showcase ad tech data availability from the Roku platform. 
+     As a Senior API Technical Writer I supported Roku’s OneView Ad Platform APIs and Partner Engineering Developer Relations projects. 
      
-     I am a member of Roku Partner Engineering Developer Relations team which seeks to better communicate concepts and procedures for the creation 
-     of a Roku channel. My current project work includes development of educational videos and associated documentation for the Brightscript 
-     programming language which is used to build media and networked applications for embedded devices. I assist developers and product 
+     I managed and developed the project initiative for the proposed forthcoming API Portal to showcase ad tech data availability from the Roku platform. 
+     
+     I was a member of the Roku Partner Engineering Developer Relations team which sought to better communicate concepts and procedures for how to create
+     the a streaming app for the Roku platform. My latest project work included an overhaul of the current Developer docs and website. Additional project 
+     work included the development of Brightscript educational videos and associated documentation. I assist developers and product 
      management in the creation and edit of partner documentation.
      
-     A final editor and source of truth for information displayed on our documentation portal. Provide ongoing iteration on improvements in 
+     I was a final editor and source of truth for information displayed on our documentation portals and provided ongoing iteration on improvements in 
      display and content.     
      
 - layout: left
