--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,7 +13,7 @@
 - layout: left
   company: 8x8 Projects
   description: | # this will include new lines to allow paragraphs 
-    [8x8 Cloud Communicatons API Reference Portal](https://8x8gateway-8x8apis.apigee.io/) // [Analytics for 8x8 Work APIs](https://8x8gateway-voanalytics.apigee.io/) // [Voice SDK User Information](https://developer.wavecell.com/voice/voice-sdk/overview) // [Jitsi as a Service](https://developer.8x8.com/jaas/docs/jaas-onboarding?_ga=2.248774276.2017987783.1639346514-2025182814.1639346514)     
+    [8x8 Cloud Communicatons API Reference Portal](https://developer.8x8.com/analytics/docs) // [Analytics for 8x8 Work APIs](https://8x8gateway-voanalytics.apigee.io/) // [Voice SDK User Information](https://developer.wavecell.com/voice/voice-sdk/overview) // [Jitsi as a Service](https://developer.8x8.com/jaas/docs/jaas-onboarding?_ga=2.248774276.2017987783.1639346514-2025182814.1639346514)     
 - layout: left 
   company: API/Developer Guides
   description: | # this will include new lines to allow paragraphs 
